[package]
name = "hello_bevy"
version = "0.1.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { git = "https://github.com/aevyrie/bevy" }
#bevy = { git = "https://github.com/ifletsomeclaire/bevy", branch = "master" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }